--- a/GraphicalEditor/App.xaml
+++ b/GraphicalEditor/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="MyPaint.App"
+﻿<Application x:Class="GraphicalEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MyPaint"
+             xmlns:local="clr-namespace:GraphicalEditor"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
